# nextpnr-fpga-interchange-site-preprocessor

./: .ci.yml  .gitmodules  Cargo.toml  README.md  build.rs  gen_svg  test
.github/workflows/: Pipeline.yml
ci/: download_device.sh  full_run.sh  generate_matrix.py  gitlab_get_matrix_config.py  matrix.json
src/: common.rs  dot_exporter.rs  exporter.rs  include_path.rs  lib.rs  log.rs  main.rs  site_brute_router.rs  strings.rs
src/ic_loader/: archdef.rs  logical_netlist.rs  mod.rs
src/logic_formula/: intersperse.rs  mod.rs  tests.rs
src/router/: mod.rs  serialize.rs  site_brute_router.rs
