[package]
name = "nisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nisp"
path = "src/main.rs"

[lib]
name = "nisp"
path = "src/lib.rs"

[dependencies]
capnp = "0.14.8"
clap = { version = "3.2.11", features = ["derive"] }
flate2 = "1.0.22"
memmap2 = "0.5.3"
lazy_static = "1.4.0"
replace_with = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[build-dependencies]
capnpc = "0.14.8"